# rust-emergency-response-server

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-auth/src/ctx/: mod.rs
crates/libs/lib-auth/src/jwt/: mod.rs
crates/libs/lib-auth/src/middleware/: mod.rs
crates/libs/lib-auth/src/password/: mod.rs
crates/libs/lib-auth/src/rbac/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/config/: app_config.rs  database.rs  mod.rs
crates/libs/lib-core/tests/: database_integration.rs
crates/libs/lib-types/: Cargo.toml
crates/libs/lib-types/src/: lib.rs
crates/libs/lib-types/src/dtos/: mod.rs
crates/libs/lib-types/src/dtos/auth/: login_request.rs  login_response.rs  mod.rs
crates/libs/lib-types/src/dtos/hospital/: hospital_response.rs  mod.rs
crates/libs/lib-types/src/dtos/patient/: create_patient.rs  mod.rs  patient_response.rs
crates/libs/lib-types/src/entities/: hospital.rs  medical_staff.rs  mod.rs  patient.rs  patient_vitals.rs  user.rs
crates/libs/lib-types/src/enums/: availability_status.rs  bed_type.rs  mod.rs  patient_status.rs  triage_level.rs  user_roles.rs
crates/libs/lib-types/src/errors/: app_error.rs  auth_error.rs  hospital_error.rs  mod.rs  patient_error.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: lib.rs
crates/libs/lib-utils/src/format/: mod.rs
crates/libs/lib-utils/src/location/: mod.rs
crates/libs/lib-utils/src/time/: mod.rs
crates/libs/lib-utils/src/validation/: mod.rs
crates/services/migration/: Cargo.toml
crates/services/migration/src/: main.rs
crates/services/seed-data/: Cargo.toml
crates/services/seed-data/src/: main.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: lib.rs  main.rs
crates/services/web-server/src/extractors/: mod.rs
crates/services/web-server/src/responses/: mod.rs
scripts/: dev-run.sh  dev-setup.sh  init-db.sql  migrate.sh
