[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-types = { path = "../lib-types" }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
