[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-types = { path = "../lib-types" }
lib-utils = { path = "../lib-utils" }

sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-postgres = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }